--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -4,7 +4,6 @@ RUN set -ex \
         && apk add go git musl-dev gcc g++ make \
         && git clone https://github.com/coredns/coredns.git /usr/src/coredns \
         && sed -i.bak 's|forward:forward|blocklist:github.com/relekang/coredns-blocklist\ndnsredir:github.com/leiless/dnsredir\nforward:forward|g' /usr/src/coredns/plugin.cfg \
-        && sed -i.bak 's|cache:cache|cache:cache\nredisc:github.com/miekg/redis|g' /usr/src/coredns/plugin.cfg \
         && cd /usr/src/coredns && make \
         && rm -rf /var/cache/apk/*
 ##### Runtime
@@ -13,7 +12,7 @@ ADD entrypoint.sh /entrypoint.sh
 COPY --from=builder /usr/src/coredns/coredns /usr/bin/coredns
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f tzdata libgcc unbound-dev redis bash \
+        && apk --no-cache add -f tzdata libgcc unbound-dev bash \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir -p /coredns \
