--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,8 +1,10 @@
 FROM alpine
+ENV PATH="/app/venv/bin:$PATH"
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f ca-certificates tzdata wget curl bash frp git python3 py3-pip py3-flask py3-requests py3-urllib3 py3-six py3-wheel py3-psutil py3-apscheduler \
+	&&  python3 -m venv /app/venv \
 	&& pip install Flask-BasicAuth Jinja2 tcp-latency \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
