--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -26,4 +26,8 @@ jobs:
       run: |
         cd ./test
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/test --platform linux/arm64,linux/amd64 . --push
+    - name: docker smartdns
+      run: |
+        cd ./smartdns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
         
