--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -5,7 +5,7 @@ RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f ca-certificates tzdata wget curl bash frp git gcc python3 py3-pip python3-dev musl-dev linux-headers \
 	&& python3 -m venv /app/venv \
-	&& pip install Flask-BasicAuth Jinja2 tcp-latency psutil apscheduler wheel six urllib3 requests flask \
+	&& pip install --upgrade pip \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
 	&& chmod +x /entrypoint.sh \
