--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -30,4 +30,8 @@ jobs:
       run: |
         cd ./smartdns
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
+    - name: docker clash
+      run: |
+        cd ./clash
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
         
