--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -42,3 +42,7 @@ jobs:
       run: |
         cd ./blocky
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/blocky --platform linux/arm64,linux/amd64 . --push
+    - name: docker cdns
+      run: |
+        cd ./cdns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/cdns --platform linux/arm64,linux/amd64 . --push
