--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -33,7 +33,7 @@ jobs:
     - name: docker clash
       run: |
         cd ./clash
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/mihomo --platform linux/arm64,linux/amd64 . --push
     - name: docker v2raya
       run: |
         cd ./v2raya
