--- a/clash/Dockerfile
+++ b/clash/Dockerfile
@@ -2,7 +2,8 @@ FROM alpine as builder
 ENV clash=1.18.1
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add wget \
+        && apk add git wget go \
+        && git clone --branch Meta https://github.com/MetaCubeX/mihomo.git /usr/src/mihomo && cd /usr/src/mihomo && go mod download && go build -o /usr/src/mihomo/mihomo -a -ldflags '-extldflags "-static"'
         && if [ $(arch) == aarch64 ]; then     wget -P /usr/bin https://github.com/MetaCubeX/mihomo/releases/download/v$clash/mihomo-linux-arm64-v$clash.gz;     gunzip /usr/bin/mihomo-linux-arm64-v$clash.gz;     mv /usr/bin/mihomo-linux-arm64-v$clash /usr/bin/mihomo; fi \
         && if [ $(arch) == x86_64 ]; then     wget -P /usr/bin https://github.com/MetaCubeX/mihomo/releases/download/v$clash/mihomo-linux-amd64-v$clash.gz;     gunzip /usr/bin/mihomo-linux-amd64-v$clash.gz;     mv /usr/bin/mihomo-linux-amd64-v$clash /usr/bin/mihomo; fi \
         && chmod +x /usr/bin/mihomo \
@@ -14,7 +15,7 @@ FROM alpine
 ENV iptables=true \
     tun=false
 ADD /script/iptables.sh /tmp/iptables.sh
-COPY --from=builder /usr/bin/mihomo /usr/bin/mihomo
+COPY --from=builder /usr/src/mihomo/mihomo /usr/bin/mihomo
 COPY --from=builder /tmp/Country.mmdb /tmp/Country.mmdb
 COPY --from=builder /tmp/gh-pages.zip  /tmp/gh-pages.zip
 ADD /entrypoint.sh /entrypoint.sh
