--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:edge as builder
+FROM alpine as builder
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add wget curl git go make \
@@ -7,6 +7,7 @@ RUN set -ex \
         && rm -rf /var/cache/apk/*
 ##### Runtime
 FROM alpine AS runtime
+ENV MOSPROXY_JSONLOGGER=true
 COPY --from=builder /usr/src/cdns/cdns /usr/bin/cdns
 COPY --from=builder /usr/src/mosproxy/mosproxy /usr/bin/mosproxy
 ADD entrypoint.sh /entrypoint.sh
