--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -58,3 +58,7 @@ jobs:
       run: |
         cd ./technitium
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/dns-server --platform linux/arm64,linux/amd64 . --push
+    - name: docker v2p
+      run: |
+        cd ./v2p
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/elecv2p --platform=linux/arm64,linux/amd64 . --push
