--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -66,3 +66,7 @@ jobs:
       run: |
         cd ./xray
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/xray --platform linux/arm64,linux/amd64 . --push
+    - name: docker singbox
+      run: |
+        cd ./singbox
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/singbox --platform linux/arm64,linux/amd64 . --push
