--- a/alist/Dockerfile
+++ b/alist/Dockerfile
@@ -6,14 +6,14 @@ RUN set -ex \
         && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.35.0/alist-linux-arm64.tar.gz; fi \
         && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.35.0/alist-linux-arm64.tar.gz; fi \
         && tar -zxvf alist.tar.gz \
-        && chmod +x /alist/alist \
+        && chmod +x alist \
         && rm -rf /var/cache/apk/*
 
-FROM alpine:edge
+FROM alpine
 LABEL MAINTAINER="i@nn.ci"
 VOLUME /opt/alist/data/
 WORKDIR /opt/alist/
-COPY --from=builder /alist/alist /usr/bin/alist
+COPY --from=builder alist /usr/bin/alist
 COPY entrypoint.sh /entrypoint.sh
 RUN apk update && \
     apk upgrade --no-cache && \
