--- a/alist/Dockerfile
+++ b/alist/Dockerfile
@@ -4,7 +4,7 @@ RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add wget curl \
         && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.35.0/alist-linux-arm64.tar.gz; fi \
-        && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.35.0/alist-linux-amd64.tar.gzz; fi \
+        && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.35.0/alist-linux-amd64.tar.gz; fi \
         && tar -zxvf alist.tar.gz \
         && chmod +x alist \
         && mv alist /usr/bin/alist \
