--- a/alist/Dockerfile
+++ b/alist/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /opt/alist/
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add wget curl bash su-exec tzdata \
+        && apk add wget curl bash su-exec musl-dev tzdata \
         && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.35.0/alist-linux-arm64.tar.gz; fi \
         && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.35.0/alist-linux-amd64.tar.gz; fi \
         && tar -zxvf /tmp/alist.tar.gz -C /tmp \
