--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -20,4 +20,4 @@ RUN set -ex \
         && rm -rf /var/cache/apk/*
 VOLUME /coredns
 EXPOSE 53
-ENTRYPOINT /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
