--- a/v2raya/Dockerfile
+++ b/v2raya/Dockerfile
@@ -30,5 +30,5 @@ RUN set -ex \
 VOLUME /etc/v2raya
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
-ENTRYPOINT /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 EXPOSE 53 2017 20170 20171 20172
