--- a/v2raya/Dockerfile
+++ b/v2raya/Dockerfile
@@ -11,6 +11,7 @@ ENV VER=2.2.5.6 \
 COPY --from=builder /usr/bin/v2ray /usr/share/v2ray/v2ray
 COPY --from=builder /usr/share/v2ray/geoip.dat /usr/local/share/v2ray/geoip.dat
 COPY --from=builder /usr/share/v2ray/geosite.dat /usr/local/share/v2ray/geosite.dat
+ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f ca-certificates tzdata wget iptables iptables-legacy bash supervisor \
@@ -20,6 +21,7 @@ RUN set -ex \
         && mkdir -p /etc/v2raya-web \
         && mkdir -p /tmp/v2ray \
         && mkdir -p /usr/share/v2ray \
+        && chmod +x /entrypoint.sh \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/feat_v5/gui/public/favicon.ico \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/feat_v5/gui/public/index.html \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/feat_v5/gui/public/CNAME \
@@ -28,7 +30,5 @@ RUN set -ex \
         && if [ $(arch) == x86_64 ]; then     wget https://github.com/v2rayA/v2rayA/releases/download/v$VER/v2raya_linux_x64_$VER;     chmod +x /v2raya_linux_x64_$VER;     mv /v2raya_linux_x64_$VER /usr/bin/v2raya; fi \
         && rm -rf /var/cache/apk/*
 VOLUME /etc/v2raya
-ADD entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 EXPOSE 53 2017 20170 20171 20172
