--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:edge AS builder
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add git go \
-        && git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -o /usr/src/blocky/blocky -a -ldflags '-extldflags "-static"'
+        && git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -trimpath -o /usr/src/blocky/blocky -a -ldflags '-extldflags "-static"'
 ##### Runtime
 FROM alpine AS runtime
 COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
