--- a/mosdns/Dockerfile
+++ b/mosdns/Dockerfile
@@ -15,7 +15,7 @@ COPY --from=builder /AdGuardHome/AdGuardHome /usr/bin/AdGuardHome
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget dhcp bash supervisor \
+        && apk --no-cache add -f ca-certificates tzdata wget dhcp bash nginx supervisor \
         #&& apk --no-cache add -f vector loki loki-promtail --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/ \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
